--- a/WebVisualizations/comparisons.html
+++ b/WebVisualizations/comparisons.html
@@ -40,43 +40,40 @@
     </div>
   </nav>
 
-  <div class = "row">
-    <div class = "col-md-1">
 
+  <div class = "maxwidth">
+    <div class = "row">
+      <header>
+        <h1>Comparison: Latitude vs X</h1>
+        <hr style = "margin-left: 20px;width: 180%;">
+      </header>
     </div>
-    <div class = "col-lg-6 col-md-12">
-      <div class="jumbotron jumbotron-fluid">
-        <h1 class="display-5">Summary: Latitude vs X</h1>
-        <hr class="my-4" style = "margin-left: 20px;">
-        <a href = "max-temp.html"><img src = "visualizations/Fig1.png" id = "padimg" style="float:left"></a>
-        <p> 
-          <p>The purpose of this project was to analyze how weather changes as you get close to the equator. To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p>
 
-          <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs latitude. Factors we looked at included: temperature, cloudiness, wind speed and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
-        </p>
+    <div class = "row">
+      <p style = "margin-top: -50px;">Click any plot to get an in-depth analysis</p>
+    </div>
+
+    <div class = "row">
+      <div class = "col-md-6 col-sm-12">
+        <h5>vs Max Temperature</h5>
+        <a href = "max-temp.html"><img src = "visualizations/Fig1.png"></a>
+      </div>
+      
+      <div class = "col-md-6 col-sm-12">
+        <h5>vs Humidity</h5>
+        <a href = "humidity.html"><img src = "visualizations/Fig2.png"></a>
       </div>
     </div>
 
-    <div class="col-lg-4 col-md-12">
-      <div class="jumbotron jumbotron-fluid">
-        <h1 class="display-5">Visualizations</h1>
-        <hr class="my-4" style = "margin-left: 20px;">
-        <p>
-          <div class="container">
-            <div class="image">
-              <a href = "max-temp.html"><img src = "visualizations/Fig1.png"></a>
-            </div>
-            <div class="image">
-              <a href = "humidity.html"><img src = "visualizations/Fig2.png"></a>
-            </div>
-            <div class="image">
-              <a href = "cloudiness.html"><img src = "visualizations/Fig3.png"></a>
-            </div>
-            <div class="image">
-              <a href = "wind-speed.html"><img src = "visualizations/Fig4.png"></a>
-            </div>
-          </div>
-        </p>
+    <div class = "row">
+      <div class = "col-md-6 col-sm-12">
+        <h5>vs Cloudiness</h5>
+        <a href = "cloudiness.html"><img src = "visualizations/Fig3.png"></a>
+      </div>
+
+      <div class = "col-md-6 col-sm-12">
+        <h5>vs Wind Speed</h5>
+        <a href = "wind-speed.html"><img src = "visualizations/Fig4.png"></a>
       </div>
     </div>
   </div>
