--- a/WebVisualizations/max-temp.html
+++ b/WebVisualizations/max-temp.html
@@ -46,13 +46,14 @@
     </div>
     <div class = "col-lg-6 col-md-12">
       <div class="jumbotron jumbotron-fluid">
-        <h1 class="display-5">Summary: Latitude vs X</h1>
+        <h1 class="display-5">Max Temperature</h1>
         <hr class="my-4" style = "margin-left: 20px;">
-        <a href = "max-temp.html"><img src = "visualizations/Fig1.png" id = "padimg" style="float:left"></a>
+        <a href = "max-temp.html"><img src = "visualizations/Fig1.png" id = "padimg"></a>
         <p> 
-          <p>The purpose of this project was to analyze how weather changes as you get close to the equator. To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p>
+          <p>By simply looking at the plot generated, it appears that there is a correlation between latitude and max temperature</p>
 
-          <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs latitude. Factors we looked at included: temperature, cloudiness, wind speed and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
+          <p>The max temperature tends to reach it's maximum as latitude approaches 0 (the equator) which we would expect
+          </p>
         </p>
       </div>
     </div>
@@ -60,7 +61,7 @@
     <div class="col-lg-4 col-md-12">
       <div class="jumbotron jumbotron-fluid">
         <h1 class="display-5">Visualizations</h1>
-        <hr class="my-4" style = "margin-left: 20px;">
+        <hr class="my-4">
         <p>
           <div class="container">
             <div class="image">
