--- a/WebVisualizations/wind-speed.html
+++ b/WebVisualizations/wind-speed.html
@@ -46,13 +46,13 @@
     </div>
     <div class = "col-lg-6 col-md-12">
       <div class="jumbotron jumbotron-fluid">
-        <h1 class="display-5">Summary: Latitude vs X</h1>
+        <h1 class="display-5">Wind Speed</h1>
         <hr class="my-4" style = "margin-left: 20px;">
-        <a href = "max-temp.html"><img src = "visualizations/Fig1.png" id = "padimg" style="float:left"></a>
+        <a href = "max-temp.html"><img src = "visualizations/Fig4.png" id = "padimg"></a>
         <p> 
-          <p>The purpose of this project was to analyze how weather changes as you get close to the equator. To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p>
+          <p>There does not appear to be a relationship between latitude and wind speed</p>
 
-          <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs latitude. Factors we looked at included: temperature, cloudiness, wind speed and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
+          <p>According to the Wikipedia page for wind speed, there are significantly more factors than simply latitude (or temperature) in determining wind speed, therefore it makes sense that we see little to no relationship https://en.wikipedia.org/wiki/Wind_speed</p>
         </p>
       </div>
     </div>
@@ -60,7 +60,7 @@
     <div class="col-lg-4 col-md-12">
       <div class="jumbotron jumbotron-fluid">
         <h1 class="display-5">Visualizations</h1>
-        <hr class="my-4" style = "margin-left: 20px;">
+        <hr class="my-4">
         <p>
           <div class="container">
             <div class="image">
