fixing minor bug

--- a/WebVisualizations/wind-speed.html
+++ b/WebVisualizations/wind-speed.html
@@ -48,7 +48,7 @@
       <div class="jumbotron jumbotron-fluid">
         <h1 class="display-5">Wind Speed</h1>
         <hr class="my-4" style = "margin-left: 20px;">
-        <a href = "max-temp.html"><img src = "visualizations/Fig4.png" id = "padimg"></a>
+        <a href = "wind-speed.html"><img src = "visualizations/Fig4.png" id = "padimg"></a>
         <p> 
           <p>There does not appear to be a relationship between latitude and wind speed</p>
 
