--- a/WebVisualizations/cloudiness.html
+++ b/WebVisualizations/cloudiness.html
@@ -48,7 +48,7 @@
       <div class="jumbotron jumbotron-fluid">
         <h1 class="display-5">Cloudiness</h1>
         <hr class="my-4" style = "margin-left: 20px;">
-        <a href = "max-temp.html"><img src = "visualizations/Fig3.png" id = "padimg"></a>
+        <a href = "cloudiness.html"><img src = "visualizations/Fig3.png" id = "padimg"></a>
         <p> 
           <p>There does not appear to be a relationship between latitude and cloudiness in this dataset</p>
 
