--- a/WebVisualizations/humidity.html
+++ b/WebVisualizations/humidity.html
@@ -48,7 +48,7 @@
       <div class="jumbotron jumbotron-fluid">
         <h1 class="display-5">Humidity</h1>
         <hr class="my-4" style = "margin-left: 20px;">
-        <a href = "max-temp.html"><img src = "visualizations/Fig2.png" id = "padimg"></a>
+        <a href = "humidity.html"><img src = "visualizations/Fig2.png" id = "padimg"></a>
         <p> 
           <p>There does not appear to be a relationship between latitude and humidity</p>
 
